# vetkeys

./: .gitignore  Cargo.toml  README.md  canister_ids.json  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: backend-motoko-format-check.yml  backend-motoko.yml  backend-rust-canbench.yml  backend-rust.yml  backend.yml  cdk.yml  clippy.yml  conventional-commits.yml  encrypted-maps-example.yml  examples-basic-bls-signing.yml  examples-basic-ibe.yml  examples-basic-timelock-ibe.yml  examples-encrypted-notes-dapp.yml  examples-password-manager-with-metadata.yml  examples-password-manager.yml  frontend.yml  key-manager-example.yml  provision-darwin.sh  provision-linux.sh  publish-backend-release.yml  publish-frontend-docs.yml  publish-frontend.yml  sdk_encrypted_maps.yml  sdk_key_manager.yml  sdk_utils.yml
backend/canisters/ic_vetkeys_encrypted_maps_canister/: Cargo.toml  Makefile
backend/canisters/ic_vetkeys_encrypted_maps_canister/tests/: tests.rs
backend/canisters/ic_vetkeys_manager_canister/: Makefile  dfx.json
backend/canisters/ic_vetkeys_manager_canister/tests/: tests.rs
backend/ic_vetkeys/: Cargo.toml  README.md
backend/ic_vetkeys/src/: lib.rs
backend/ic_vetkeys/src/encrypted_maps/: README.md
backend/ic_vetkeys/src/key_manager/: mod.rs
backend/ic_vetkeys/tests/: key_manager.rs
backend/ic_vetkeys_test_utils/src/: lib.rs
backend/mo/canisters/ic_vetkeys_encrypted_maps_canister/: dfx.json  mops.toml
backend/mo/canisters/ic_vetkeys_manager_canister/: dfx.json  mops.toml
backend/mo/ic_vetkeys/: CHANGELOG.md  README.md  mops.toml
backend/mo/ic_vetkeys/src/: ManagementCanister.mo  Types.mo  lib.mo
backend/mo/ic_vetkeys/test/: EncryptedMaps.test.mo  KeyManager.test.mo
backend/rs/benchmarks/: Cargo.toml
backend/rs/canisters/ic_vetkeys_encrypted_maps_canister/: Cargo.toml  Makefile  dfx.json
backend/rs/canisters/ic_vetkeys_encrypted_maps_canister/src/: lib.rs
backend/rs/canisters/ic_vetkeys_encrypted_maps_canister/tests/: tests.rs
backend/rs/canisters/ic_vetkeys_manager_canister/: Cargo.toml  Makefile  dfx.json
backend/rs/canisters/tests/: Cargo.toml
backend/rs/ic_vetkeys/: CHANGELOG.md  Cargo.toml  README.md
backend/rs/ic_vetkeys/src/: lib.rs  types.rs  vetkd_api_types.rs
backend/rs/ic_vetkeys/src/encrypted_maps/: README.md  mod.rs
backend/rs/ic_vetkeys/src/key_manager/: README.md  mod.rs
backend/rs/ic_vetkeys/src/utils/: mod.rs
backend/rs/ic_vetkeys/tests/: encrypted_maps.rs  key_manager.rs  utils.rs
backend/rs/ic_vetkeys_test_utils/: Cargo.toml
backend/rs/ic_vetkeys_test_utils/src/: lib.rs
cdk/encrypted_maps/src/: lib.rs
cdk/encrypted_maps/tests/: tests.rs
cdk/encrypted_maps_example/src/: lib.rs
cdk/encrypted_maps_example/tests/: tests.rs
cdk/key_manager/src/: lib.rs
cdk/key_manager/tests/: tests.rs
cdk/key_manager_example/src/: lib.rs
cdk/key_manager_example/tests/: tests.rs
cdk/types/src/: lib.rs
examples/basic_bls_signing/: README.md  deploy_locally.sh  dfx.json
examples/basic_bls_signing/backend/: Cargo.toml  Makefile
examples/basic_bls_signing/frontend/: package-lock.json  package.json
examples/basic_bls_signing/frontend/public/: .ic-assets.json5
examples/basic_bls_signing/frontend/scripts/: gen_bindings.sh
examples/basic_bls_signing/frontend/src/: main.ts  style.css
examples/basic_bls_signing/motoko/: dfx.json  mops.toml
examples/basic_bls_signing/rust/: dfx.json
examples/basic_bls_signing/rust/backend/: Cargo.toml
examples/basic_ibe/: README.md  deploy_locally.sh  dfx.json
examples/basic_ibe/backend/: Cargo.toml  Makefile  backend.did
examples/basic_ibe/backend/src/: lib.rs  types.rs
examples/basic_ibe/frontend/: package-lock.json  package.json  vite.config.ts
examples/basic_ibe/frontend/public/: .ic-assets.json5
examples/basic_ibe/frontend/scripts/: gen_bindings.sh
examples/basic_ibe/motoko/: dfx.json  mops.toml
examples/basic_ibe/rust/: dfx.json
examples/basic_timelock_ibe/: README.md  deploy_locally.sh  dfx.json
examples/basic_timelock_ibe/backend/: Cargo.toml  Makefile  backend.did
examples/basic_timelock_ibe/backend/src/: lib.rs  types.rs
examples/basic_timelock_ibe/frontend/: package-lock.json  package.json  vite.config.ts
examples/encrypted_notes_dapp_vetkd/: README.md
examples/encrypted_notes_dapp_vetkd/frontend/: package-lock.json  package.json
examples/encrypted_notes_dapp_vetkd/motoko/: dfx.json
examples/encrypted_notes_dapp_vetkd/rust/: dfx.json
examples/password_manager/: README.md  deploy_locally.sh  dfx.json
examples/password_manager/frontend/: README.md  eslint.config.mjs  jsconfig.json  package-lock.json  package.json  tailwind.config.cjs  vite.config.js  vite.config.ts
examples/password_manager/motoko/: mops.toml
examples/password_manager_with_metadata/: README.md  deploy_locally.sh  dfx.json
examples/password_manager_with_metadata/backend/: Cargo.toml  Makefile
examples/password_manager_with_metadata/backend/src/: lib.rs
examples/password_manager_with_metadata/frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.js
examples/password_manager_with_metadata/motoko/: dfx.json  mops.toml
examples/password_manager_with_metadata/rust/: dfx.json
frontend/ic_vetkeys/: CHANGELOG.md  README.md  eslint.config.mjs  make_did_bindings.sh  package.json  tsconfig.json  typedoc.json  vite.config.ts
frontend/ic_vetkeys/src/: index.ts
frontend/ic_vetkeys/test/: setup.ts
scripts/: gen_and_deploy_frontend_docs.sh
sdk/ic_vetkd_sdk_encrypted_maps/: package.json
sdk/ic_vetkd_sdk_encrypted_maps/src/: index.ts
sdk/ic_vetkd_sdk_encrypted_maps_example/: package.json  vite.config.ts
sdk/ic_vetkd_sdk_encrypted_maps_example/src/: index.test.ts  index.ts
sdk/ic_vetkd_sdk_key_manager/: package.json
sdk/ic_vetkd_sdk_key_manager/src/: index.ts
sdk/ic_vetkd_sdk_key_manager_example/: package.json  tsconfig.json  vite.config.ts
sdk/ic_vetkd_sdk_key_manager_example/src/: index.test.ts  index.ts
sdk/ic_vetkd_sdk_utils/: package.json
sdk/ic_vetkd_sdk_utils/test/: index.test.ts
(+73 files in other folders)
