[workspace]
members = [
    "backend/rs/ic_vetkeys",
    "backend/rs/ic_vetkeys_test_utils",
    "backend/rs/canisters/ic_vetkeys_encrypted_maps_canister",
    "backend/rs/canisters/ic_vetkeys_manager_canister",
    "backend/rs/canisters/tests",
    "examples/basic_ibe/backend",
    "examples/basic_timelock_ibe/backend",
    "examples/password_manager_with_metadata/backend"
]
resolver = "2"

[workspace.package]
authors = ["The Internet Computer Project Developers"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Verifiably encrypted threshold key derivation (VetKD) canister development kit (CDK)"
documentation = "https://crates.io/vetkd_cdk"

[workspace.dependencies]
anyhow = "1.0.95"
candid = "0.10.2"
hex = "0.4.3"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6.8"
lazy_static = "1.5.0"
pocket-ic = "9.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_with = "3.11.0"
ic-dummy-getrandom-for-wasm = "0.1.0"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'