[package]
name = "ic-vetkeys"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
futures = "0.3.31"
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_with = "3.11.0"
strum = "0.26.3"
strum_macros = "0.26.3"

[dev-dependencies]
assert_matches = "1.5.0"
ic-agent = "0.38.2"
ic-vetkeys-test-utils = { path = "../ic_vetkeys_test_utils" }
pocket-ic = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
strum = "0.26.3"

[features]
expose-testing-api = []
