[package]
name = "ic-vetkeys-encrypted-maps-canister"
authors = ["DFINITY Stiftung"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "# Basic Identity Based Encryption"
repository = "https://github.com/dfinity/vetkeys"
rust-version = "1.75.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.18.3"
ic-cdk-macros = "0.18.3"
ic-dummy-getrandom-for-wasm = "0.1.0"
ic-stable-structures = "0.6.8"
ic-vetkeys = "0.2.0"
serde = "1.0.217"

[dev-dependencies]
pocket-ic = "9.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = "0.12.12"
